--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,9 +2,14 @@
 
 #app {
   margin: 0 auto;
-  padding: 2rem;
+  padding: 1rem;
   font-weight: normal;
   height: 100vh;
   width: 100vw;
+
+
+  @media only screen and (min-width: 768px) {
+    padding: 2rem;
+}
 }
 
